--- a/authflow/package.json
+++ b/authflow/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.3",
+    "helm": "^0.2.1",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
