--- a/authflow/.github/workflows/ci-cd.yml
+++ b/authflow/.github/workflows/ci-cd.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Lint Code
         run: yarn lint
+        working-directory: ./authflow
 
       - name: Run Tests
         run: yarn test
