--- a/authflow/tsconfig.json
+++ b/authflow/tsconfig.json
@@ -3,5 +3,9 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
-}
+  ],
+  
+  "compilerOptions": {
+    "types": ["./src/shims-vue.d.ts"]
+  },
+  "exclude": ["node_modules"]}
