--- a/authflow/.github/workflows/ci-cd.yml
+++ b/authflow/.github/workflows/ci-cd.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
-      - name: Lint Code
-        run: yarn lint
-        working-directory: ./authflow
+      # - name: Lint Code
+      #   run: yarn lint
+      #   working-directory: ./authflow
 
       - name: Run Tests
         run: yarn test
