--- a/authflow/package.json
+++ b/authflow/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "test",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
