--- a/authflow/package.json
+++ b/authflow/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "test",
+    "test": "vitest",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
@@ -23,12 +23,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/ui": "^3.0.9",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vitest": "^3.0.9",
     "vue-tsc": "^2.2.4"
   }
 }
